fix(docs): text alignments and box text appearance

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -31,3 +31,11 @@ body {
   opacity: 0;
   z-index: 3;
 }
+
+.box h1 {
+  font-size: 2rem;
+  font-weight: normal;
+  color: white;
+  text-align: center;
+  opacity: 1;
+}
